--- a/01-html-only/about.html
+++ b/01-html-only/about.html
@@ -44,7 +44,7 @@
 
     <section id="hours">
       <h2>Hours of Operation</h2>
-      <table>
+      <table class="table table-striped">
         <tr>
           <th>Day</th>
           <th>Hours</th>
