--- a/01-html-only/about.html
+++ b/01-html-only/about.html
@@ -10,88 +10,91 @@
 </head>
 
 <body>
-  <header>
-    <h1>Welcome to Fur-tastic Grooming!</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+  <div class="container">
+    <header>
+      <h1>Welcome to Fur-tastic Grooming!</h1>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main>
-    <section id="about">
-      <h2>About Us</h2>
-      <p>Welcome to Fur-tastic Grooming, where we pamper your furry friends! Our team of experienced groomers
-        will ensure your pet looks and feels their best.</p>
-      <p>We created Fur-tastic Grooming because we believe that every dog deserves to feel and look their best.
-        With our passion for pets and our commitment to providing top-quality grooming services, we strive to
-        make every grooming experience enjoyable for both pets and their owners.</p>
-    </section>
+    <main>
+      <section id="about">
+        <h2>About Us</h2>
+        <p>Welcome to Fur-tastic Grooming, where we pamper your furry friends! Our team of experienced groomers
+          will ensure your pet looks and feels their best.</p>
+        <p>We created Fur-tastic Grooming because we believe that every dog deserves to feel and look their best.
+          With our passion for pets and our commitment to providing top-quality grooming services, we strive to
+          make every grooming experience enjoyable for both pets and their owners.</p>
+      </section>
 
-    <section id="services">
-      <h2>Our Services</h2>
-      <ul>
-        <li>Full Grooming</li>
-        <li>Bath and Brush</li>
-        <li>Nail Trimming</li>
-        <li>Ear Cleaning</li>
-      </ul>
-    </section>
+      <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+          <li>Full Grooming</li>
+          <li>Bath and Brush</li>
+          <li>Nail Trimming</li>
+          <li>Ear Cleaning</li>
+        </ul>
+      </section>
 
-    <section id="hours">
-      <h2>Hours of Operation</h2>
-      <table class="table table-striped">
-        <tr>
-          <th>Day</th>
-          <th>Hours</th>
-        </tr>
-        <tr>
-          <td>Monday - Friday</td>
-          <td>9:00 AM - 6:00 PM</td>
-        </tr>
-        <tr>
-          <td>Saturday</td>
-          <td>10:00 AM - 4:00 PM</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>Closed</td>
-        </tr>
-      </table>
-    </section>
+      <section id="hours">
+        <h2>Hours of Operation</h2>
+        <table class="table table-striped">
+          <tr>
+            <th>Day</th>
+            <th>Hours</th>
+          </tr>
+          <tr>
+            <td>Monday - Friday</td>
+            <td>9:00 AM - 6:00 PM</td>
+          </tr>
+          <tr>
+            <td>Saturday</td>
+            <td>10:00 AM - 4:00 PM</td>
+          </tr>
+          <tr>
+            <td>Sunday</td>
+            <td>Closed</td>
+          </tr>
+        </table>
+      </section>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>Ready to book an appointment? Give us a call at <strong>(555) 123-4567</strong> or send us an email at
-        <a href="mailto:info@furtasticgrooming.com">info@furtasticgrooming.com</a>.
-      </p>
-    </section>
-  </main>
+      <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Ready to book an appointment? Give us a call at <strong>(555) 123-4567</strong> or send us an email at
+          <a href="mailto:info@furtasticgrooming.com">info@furtasticgrooming.com</a>.
+        </p>
+      </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
+    </footer>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
