--- a/01-html-only/services.html
+++ b/01-html-only/services.html
@@ -10,53 +10,56 @@
 </head>
 
 <body>
-  <header>
-    <h1>Our Services</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+  <div class="container">
+    <header>
+      <h1>Our Services</h1>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main>
-    <section id="services">
-      <h2>Our Services</h2>
-      <ul>
-        <li><strong>Full Grooming:</strong> Includes bathing, haircut, nail trimming, and ear cleaning.</li>
-        <li><strong>Bath and Brush:</strong> Refreshing bath with professional brushing to remove loose hair
-          and mats.</li>
-        <li><strong>Nail Trimming:</strong> Safe and gentle nail trimming to keep your pet's nails at a
-          healthy length.</li>
-        <li><strong>Ear Cleaning:</strong> Thorough ear cleaning to prevent infections and maintain ear
-          health.</li>
-      </ul>
-    </section>
-  </main>
+    <main>
+      <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+          <li><strong>Full Grooming:</strong> Includes bathing, haircut, nail trimming, and ear cleaning.</li>
+          <li><strong>Bath and Brush:</strong> Refreshing bath with professional brushing to remove loose hair
+            and mats.</li>
+          <li><strong>Nail Trimming:</strong> Safe and gentle nail trimming to keep your pet's nails at a
+            healthy length.</li>
+          <li><strong>Ear Cleaning:</strong> Thorough ear cleaning to prevent infections and maintain ear
+            health.</li>
+        </ul>
+      </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
+    </footer>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
