--- a/01-html-only/contact.html
+++ b/01-html-only/contact.html
@@ -5,14 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fur-tastic Grooming - Contact Us</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Font Awesome CDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container">
-    <header>
-      <h1>Contact Us</h1>
+  <div class="container py-4">
+    <header class="pb-3 border-bottom">
+      <h1 class="display-4">Contact Us</h1>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
@@ -21,18 +25,18 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About Us</a>
+                <a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link" href="services.html"><i class="fas fa-cogs"></i> Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
               </li>
             </ul>
           </div>
@@ -40,11 +44,10 @@
       </nav>
     </header>
 
-    <main>
-      <section id="contact-info">
-        <h2>Contact Information</h2>
-        <p>If you have any questions or would like to schedule an appointment, feel free to contact us:</p>
-        <ul>
+    <main class="py-4">
+      <section id="contact-info" class="mb-4">
+        <h2 class="mb-3">Contact Information</h2>
+        <ul class="list-unstyled">
           <li><strong>Phone:</strong> (555) 123-4567</li>
           <li><strong>Email:</strong> <a href="mailto:info@furtasticgrooming.com">info@furtasticgrooming.com</a>
           </li>
@@ -53,7 +56,7 @@
       </section>
 
       <section id="contact-form">
-        <h2>Send us a Message</h2>
+        <h2 class="mb-3">Send us a Message</h2>
         <form action="#" method="post">
           <div class="mb-3">
             <label for="name" class="form-label">Name:</label>
@@ -69,16 +72,18 @@
           </div>
           <button type="submit" class="btn btn-primary">Send</button>
         </form>
+
       </section>
     </main>
 
-    <footer>
+    <footer class="mt-4 text-center">
       <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
     </footer>
+
   </div>
 
+  <!-- Bootstrap JavaScript (optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
