--- a/01-html-only/index.html
+++ b/01-html-only/index.html
@@ -5,14 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fur-tastic Grooming</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Font Awesome CDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 
-<body>
-  <div class="container">
-    <header>
-      <h1>Welcome to Fur-tastic Grooming!</h1>
+<body class="bg-light">
+  <div class="container py-4">
+    <header class="mb-4">
+      <h1 class="mb-3">Welcome to Fur-tastic Grooming!</h1>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
@@ -21,18 +25,18 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About Us</a>
+                <a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link" href="services.html"><i class="fas fa-cogs"></i> Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
               </li>
             </ul>
           </div>
@@ -41,13 +45,13 @@
     </header>
 
     <main>
-      <section id="about">
+      <section id="about" class="mb-4">
         <h2>About Us</h2>
         <p>Welcome to Fur-tastic Grooming, where we pamper your furry friends! Our team of experienced groomers
           will ensure your pet looks and feels their best.</p>
       </section>
 
-      <section id="services">
+      <section id="services" class="mb-4">
         <h2>Our Services</h2>
         <ul>
           <li>Full Grooming</li>
@@ -57,7 +61,7 @@
         </ul>
       </section>
 
-      <section id="contact">
+      <section id="contact" class="mb-4">
         <h2>Contact Us</h2>
         <p>Ready to book an appointment? Give us a call at <strong>(555) 123-4567</strong> or send us an email at
           <a href="mailto:info@furtasticgrooming.com">info@furtasticgrooming.com</a>.
@@ -65,13 +69,13 @@
       </section>
     </main>
 
-    <footer>
-      <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
+    <footer class="mb-4">
+      <p class="text-center">&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
     </footer>
-  </div>
 
+  </div>
+  <!-- Bootstrap JavaScript (optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
