--- a/01-html-only/services.html
+++ b/01-html-only/services.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fur-tastic Grooming - Services</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-  <div class="container">
-    <header>
-      <h1>Our Services</h1>
+<body class="bg-light">
+  <div class="container py-4">
+    <header class="mb-4">
+      <h1 class="mb-3">Our Services</h1>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Fur-tastic Grooming</a>
@@ -26,10 +27,10 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">About Us</a>
+                <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link active" href="services.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -41,28 +42,60 @@
     </header>
 
     <main>
-      <section id="services">
-        <h2>Our Services</h2>
-        <ul>
-          <li><strong>Full Grooming:</strong> Includes bathing, haircut, nail trimming, and ear cleaning.</li>
-          <li><strong>Bath and Brush:</strong> Refreshing bath with professional brushing to remove loose hair
-            and mats.</li>
-          <li><strong>Nail Trimming:</strong> Safe and gentle nail trimming to keep your pet's nails at a
-            healthy length.</li>
-          <li><strong>Ear Cleaning:</strong> Thorough ear cleaning to prevent infections and maintain ear
-            health.</li>
-        </ul>
+      <section id="services" class="mb-4">
+        <h2 class="mb-3">Our Services</h2>
+        <div class="row">
+          <!-- Full Grooming -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/300" class="card-img-top" alt="Full Grooming">
+              <div class="card-body">
+                <h5 class="card-title">Full Grooming</h5>
+                <p class="card-text">Includes bathing, haircut, nail trimming, and ear cleaning.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Bath and Brush -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/300" class="card-img-top" alt="Bath and Brush">
+              <div class="card-body">
+                <h5 class="card-title">Bath and Brush</h5>
+                <p class="card-text">Refreshing bath with professional brushing to remove loose hair and mats.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Nail Trimming -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/300" class="card-img-top" alt="Nail Trimming">
+              <div class="card-body">
+                <h5 class="card-title">Nail Trimming</h5>
+                <p class="card-text">Safe and gentle nail trimming to keep your pet's nails at a healthy length.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Ear Cleaning -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card">
+              <img src="https://via.placeholder.com/300" class="card-img-top" alt="Ear Cleaning">
+              <div class="card-body">
+                <h5 class="card-title">Ear Cleaning</h5>
+                <p class="card-text">Thorough ear cleaning to prevent infections and maintain ear health.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer>
+    <footer class="text-center mt-4">
       <p>&copy; 2024 Fur-tastic Grooming. All rights reserved.</p>
     </footer>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <!-- Bootstrap JavaScript (optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
